# album_creator

./: Album.cpp  Album.hpp  Album_image.cpp  Album_image.hpp  Album_images.cpp  Album_images.hpp  Albumoutput.html  Albums.cpp  Albums.hpp  Artist.cpp  Artist.hpp  Artist_image.cpp  Artist_image.hpp  Artist_images.cpp  Artist_images.hpp  Artistoutput.html  Artists.cpp  Artists.hpp  CMakeLists.txt  Html_Masterfile.html  JSONArray.cpp  JSONArray.hpp  JSONDataObject.cpp  JSONDataObject.hpp  Pair.cpp  Pair.hpp  README.TXT  README.md  Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Track.cpp  Track.hpp  Tracks.cpp  Tracks.hpp  Tracksoutput.html  album_template.html  albums.json  artist_template.html  (+3 more)
Album_html/: html_albums0.html  html_albums1.html  html_albums10.html  html_albums100.html  html_albums101.html  html_albums102.html  html_albums103.html  html_albums104.html  html_albums105.html  html_albums106.html  html_albums107.html  html_albums108.html  html_albums109.html  html_albums11.html  html_albums110.html  html_albums111.html  html_albums112.html  html_albums113.html  html_albums114.html  html_albums115.html  html_albums116.html  html_albums117.html  html_albums118.html  html_albums119.html  html_albums12.html  html_albums120.html  html_albums121.html  html_albums122.html  html_albums123.html  html_albums124.html  html_albums125.html  html_albums126.html  html_albums127.html  html_albums128.html  html_albums129.html  html_albums13.html  html_albums130.html  html_albums131.html  html_albums132.html  html_albums133.html  (+411 more)
